--- a/Page1.html
+++ b/Page1.html
@@ -11,97 +11,107 @@
     <div class="navbar">
       <a href="index.html">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">
-          Tours
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button class="dropbtn">Tours</button>
         <div class="dropdown-content">
           <a href="Page1.html">BTS of tours</a>
           <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Music
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="page3.html">Genres</a>
-        </div>
+      <div class="Music">
+        <a href="page4.html">Music</a>
       </div>
     </div>
     <div>
       <div class="row">
-        <div class="column left"></div>
-        <div class="column middle"><section class="touring">
-          <div class="touring-text">
+        <div class="column middle">
+          <section class="touring">
+            <div class="touring-text"></div>
             <h1>BTS of tours</h1>
-            <p1
-              >Touring is a complex and dynamic process that requires a lot of
+            <p1>
+              Touring is a complex and dynamic process that requires a lot of
               hard work, dedication and preparation. Before the touring itself
-              happens, a lot of planning and preparing goes into what will happen
-              the night of the concert. This includes booking venues, organising
-              transport, arranging accomodation, and hiring crew members. This
-              process also includes the music artists warming up their vocals,
-              going through their rehersals, fine-tuning their preformances and
-              perfecting their choregraphy. The time taken to plan and prepare for
-              a tour varies depending on the size and complexity of the tour. It
-              generally takes several months to a year to plan for a large-scale
-              international scale. One of the main reasons why touring can be very
-              exhausting for artists is to do with the traveling from one city to
-              another, often across different timezones. 
-  
+              happens, a lot of planning and preparing goes into what will
+              happen the night of the concert. This includes booking venues,
+              organising transport, arranging accomodation, and hiring crew
+              members. This process also includes the music artists warming up
+              their vocals, going through their rehersals, fine-tuning their
+              preformances and perfecting their choregraphy. The time taken to
+              plan and prepare for a tour varies depending on the size and
+              complexity of the tour. It generally takes several months to a
+              year to plan for a large-scale international scale. One of the
+              main reasons why touring can be very exhausting for artists is to
+              do with the traveling from one city to another, often across
+              different timezones. Before each performance, the artists do a
+              soundcheck to ensure that everything is and will be working
+              properly. This involves testing the sound system, checking the
+              lighting, and adjusting any technical issues.
               <div class="myImage">
                 <img
                   src="https://c0.wallpaperflare.com/preview/945/139/735/on-set-light-behind-the-scene-production.jpg"
                   width="600px"
                   height="300px"
+                  alt="on-set-light-behind-the-scene-production"
                 />
-              </div>
-              Before each performance, the artists do a soundcheck to ensure that
-              everything is and will be working properly. This involves testing
-              the sound system, checking the lighting, and adjusting any technical
-              issues. Depending on the schedule, artists will offer and organise
-              meet and greets for their fans before and after performance. This
-              gives the fans an opportunity to interact with their favourite
-              artists, take pictures and get autographs. Performing infront of
-              their fans can create a personal touch because it allows performers
-              to connect with their audience emotionally. The preformances are the
-              highlight of the tour, music artists can perform for several hours
-              each night, and the energy and the excitement you get from the crowd
-              can be exhilarating. Now for performance, there's an after party
-              that singers and song writers attend to with their crew, fans and
-              celebrities. This gives everyone a chance to unwind, celebrate the
-              concert and enjoy others company. Touring can be phyiscally and
-              mentally demanding so rest and recovery is one of the biggest
-              priorities; which includes taking rests, getting enough of sleep,
-              and eating properly to ensure they stay healthy and energized
-              throughout the rest of the tour. There's a lot that goes into an
-              artist and their self-care management.
-  
-              <div class="secondimage">
                 <img
-                src="https://img.freepik.com/free-photo/digital-mixing-console-sound-mixer-control-panel-closeup-audio-faders_627829-11445.jpg"
-                width="600px" height="300px> />
-              </div>
-  
-              <div class="thirdimage">
-                Throughout the tours, artists tend to push their vocals to the
-                limit when performing which over a long period of time can affect
-                their vocal health
-  
-                <img
-                  src="https://www.rappler.com/tachyon/r3-assets/2D217E9941354475AF527C91B09E0604/img/595E3E67EDCF49498227D35FF22ECA27/RakrakanDSCF6438Backstage.jpg"
-                  width="500px"
+                  src="https://images.pexels.com/photos/13599829/pexels-photo-13599829.jpeg"
+                  width="600px"
                   height="300px"
+                  alt="pexels-photo-13599829"
+                />
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/7/7d/YMO_Tribute_Vol.4_Ichiko_Hashimoto_Rehearsal_%284280991415%29.jpg"
+                  width="600px"
+                  height="300px"
+                  alt="YMO_Tribute_Vol"
                 />
               </div>
+              Depending on the schedule, artists will offer and organise meet
+              and greets for their fans before and after performance. This gives
+              the fans an opportunity to interact with their favourite artists,
+              take pictures and get autographs. Performing infront of their fans
+              can create a personal touch because it allows performers to
+              connect with their audience emotionally. The preformances are the
+              highlight of the tour, music artists can perform for several hours
+              each night, and the energy and the excitement you get from the
+              crowd can be exhilarating. Now for performance, there's an after
+              party that singers and song writers attend to with their crew,
+              fans and celebrities. This gives everyone a chance to unwind,
+              celebrate the concert and enjoy others company. Touring can be
+              phyiscally and mentally demanding so rest and recovery is one of
+              the biggest priorities; which includes taking rests, getting
+              enough of sleep, and eating properly to ensure they stay healthy
+              and energized throughout the rest of the tour. There's a lot that
+              goes into an artist and their self-care management. Throughout the
+              tours, artists tend to push their vocals to the limit when
+              performing which can cause vocal strain and severely damage their
+              vocal cords. A lot of work goes into warming and strengthening up
+              your voice when touring, artists need to do specific exercises to
+              improve the stength, flexibility and control of their vocal cords.
+              Singers tend to use the humming method to help relax their vocals
+              and enhance vibrational patterns. Another important exercise that
+              singers need to practise is their breathing. This essentially
+              warms up their respiratory system and improving breath support.
+              <img
+                src="https://c1.wallpaperflare.com/preview/76/97/196/backstage-manhattan-performance-stage.jpg"
+                height="400px"
+                width="600px"
+                alt="backstage-manhattan-performance-stage"
+              />
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/3/31/Routemaster_RM1101_%28KFF_367%29%2C_27_October_2012.jpg"
+                width="600"
+                height="400"
+                alt="Routemaster_RM1101_%28KFF_367%29%2C_27_October_2012"
+              />
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Math_the_Band_at_Maggie_Maes_Gibson_Room.jpg"
+                width="650"
+                height="400/&gt;"
+                alt="Math_the_Band_at_Maggie_Maes_Gibson_Room"
+              />
             </p1>
-          </div>
-        </section></div>
-        <div class="column right"></div>
-
-
+          </section>
+        </div>
       </div>
     </div>
   </body>
