--- a/Page2.html
+++ b/Page2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
     <div class="navbar">
       <a href="index.html">Home</a>
       <div class="dropdown">
@@ -20,14 +20,8 @@
           <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Music
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="page3.html">Genres</a>
-        </div>
+      <div class="Music">
+        <a href="page4.html">Music</a>
       </div>
     </div>
 
@@ -40,36 +34,66 @@
 
       <div class="artist container">
         <p class="artist-name">P!nk</p>
+        <div class="ol">
+          <li>Date: Tuesday 05th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Forsyth Barr Stadium</li>
+          <li>Date: Tuesday 05th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Forsyth Barr Stadium VIP packages</li>
+          <li>Date: Friday 08th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Eden Park</li>
+          <li>Date: Friday 08th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Eden Park VIP packages</li>
+          <li>Date: Saturday 09th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Eden Park standard tickets/li></li>
+          <li>Date: Saturday 09th March 2024</li>
+          <li>Time: 5:00pm</li>
+          <li>Location: Eden Park VIP packages</li>
+        </div>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
       <div class="artist container">
         <p class="artist-name">Mitch James</p>
+        <div class="ol">
+          <li>Date: Saturday 24th July</li>
+          <li>Time: 8:00pm</li>
+          <li>Location: New Zealand</li>
+        </div>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
       <div class="artist container">
         <p class="artist-name">Lizzo</p>
+        <div class="ol">
+          <li>Date: Wednesday 26th July</li>
+          <li>Time: 6:30pm</li>
+          <li>Location: Spark Area</li>
+        </div>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
       <div class="artist container">
         <p class="artist-name">Sam Smith</p>
-        <a href="#page3.html" class="button">Buy tickets</a>
-      </div>
-
-      <div class="artist container">
-        <p class="artist-name">Lord</p>
+        <div class="ol">
+          <li>Date: Saturday 11th November</li>
+          <li>Time: 7:00pm</li>
+          <li>Location: Spark Area</li>
+        </div>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
       <div class="artist container">
         <p class="artist-name">Wu-Tang Clan & Nas</p>
-        <a href="#page3.html" class="button">Buy tickets</a>
-      </div>
-
-      <div class="artist container">
-        <p class="artist-name">The Ten Tenors</p>
+        <div class="ol">
+          <li>Date: Tuesday 09th May</li>
+          <li>Time: 7:00pm</li>
+          <li>Location: Spark Area</li>
+        </div>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
     </div>
