--- a/page7.html
+++ b/page7.html
@@ -20,14 +20,8 @@
           <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Music
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="page3.html">Genres</a>
-        </div>
+      <div class="Music">
+        <a href="page4.html">Music</a>
       </div>
     </div>
   </body>
